Fix badge alignment to stay inline on mobile

--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -222,8 +222,8 @@
   }
 
   .post-item {
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    align-items: center;
     padding-bottom: 10px;
   }
 
